<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">DailyWiFi</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="noAccounts">No accounts</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="ssid">SSID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ssidIsRequired">SSID is required</string>
    <string name="usernameIsRequired">Username is required</string>
    <string name="passwordIsRequired">Password is required</string>
    <string name="lastAccess">Last access</string>
    <string name="notAvailable">N/A</string>
    <string name="accountExists">Joining %1s&#8230;</string>
    <string name="networkIsNotCompatible">%1s is not DailyWiFi compatible</string>
    <string name="compatibleNetwork">Compatible network</string>
    <string name="validCredentials">Valid credentials</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loggedIn">%1s joined successfully</string>
    <string name="alreadyLoggedIn">Already joined %1s</string>
    <string name="invalidCredentials">Invalid username or password for %1s</string>
    <string name="showPassword">Show password</string>
    <string name="logout">Logout</string>
    <string name="loggedOut">Disconnected from $1</string>
    <string name="alreadyLoggedOut">Already disconnected from $1</string>
    <string name="pref_enabled_title">Abilita monitoring</string>
    <string name="pref_enabled_summary">Permetti a DailyWiFi di connetterti alle reti Wi-Fi conosciute.</string>
    
</resources>